adding bog adventure to projects

--- a/index.html
+++ b/index.html
@@ -166,7 +166,18 @@
                     </div>
                 </div>
 
-              
+                <!-- Bog Adventure -->
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="https://bog-adventure.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/bog_app.png" /></a>
+                    </div>
+                    <div class="project-content col-md-6">
+                        <h3>Bog Adventure -<small><a class="project-links" href="https://github.com/TheCodingCarlson/bog_adventure" target="_blank"> Github</a> | <a class="project-links" href="https://bog-adventure.herokuapp.com/" target="_blank">Demo</a></small></h3>
+                        <p>A simple Ruby on Rails app with CRUD functionality. Users can create and edit bog creatures as well as add tags to each creature. Creatures and tags can also be deleted.</p>
+
+                         <p class="tech-used">Tech Used: HTML5, CSS3, Ruby, Ruby on Rails and Postgres</p>
+                    </div>
+                </div>
 
                 <!-- Hangman -->
                 <template v-if="windowWidth > 992">
