css updates for mobile

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <section id="work" class="content-section text-center">
         <div class="download-section">
             <div class="container">
-                <h2 id="work">Work</h2>
+                <h2 class="work-header" id="work">Work</h2>
 
                 <div class="project-row row">
                     <div class="col-md-5">
@@ -122,7 +122,7 @@
                         <h3>The Modern Retailer -<small><a class="project-links" href="http://www.microsoftpartnersolutions.com/" target="_blank"> Live Site</a></small></h3>
                         <p>A portal created to help direct business towards various MSFT partners. The site consists of a landing page, an assessment, and 6 partner pages. The assessment uses VueJS to dynamically take in user input and create percentages on how effective their business is in a certain category. I was responsible for the front-end code, making sure that the creative team's design came to life in a practical and meaningful way.</p>
 
-                        <p class="tech-used">Tech Used: HTML5, LESS, JS, Bootstrap4, JQuery, VueJS, Handlebars, Gulp, Roots, Contentful and ParsleyJS</p>
+                        <p class="tech-used">Tech Used: HTML5, LESS, JS, Bootstrap4, JQuery, VueJS, Handlebars, Gulp, Roots, Contentful, ParsleyJS</p>
                     </div>
                 </div>
 
@@ -134,11 +134,11 @@
                         <h3>Acer Keep Asking -<small><a class="project-links" href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"> Live Site</a></small></h3>
                         <p>Part of the Acer site, this section features articles written by tech-savvy moms that give parents advice on how to incorporate tech into family life. Other topics covered include tips for setting tech ground-rules with kids, fun tech ideas and video interviews. I was responsible for the redesign of the landing page and article pages, as well as writing the code for collapsing/expanding articles.</p>
 
-                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, jQuery and Handlebars</p>
+                        <p class="tech-used" id="last">Tech Used: HTML5, CSS3, JS, jQuery, Handlebars</p>
                     </div>
                 </div>
 
-                <h2 id="work">Projects/For Fun</h2>
+                <h2 class="work-header">Projects/For Fun</h2>
 
                 <!-- Harmonize -->
                 <div class="project-row row">
@@ -149,7 +149,7 @@
                         <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize" target="_blank"> Github</a> | <a class="project-links" href="https://harmonize2.herokuapp.com/" target="_blank">Demo</a></small></h3>
                         <p>A chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't sure how to put them together in a practical and musical way. Users can save favorite progressions to their profile for future reference.</p>
 
-                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, TeoriaJS, AngularJS, Express/NodeJS and MongoDB/Mongoose</p>
+                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, TeoriaJS, AngularJS, Express/NodeJS, MongoDB/Mongoose</p>
                     </div>
                 </div>
 
@@ -162,7 +162,7 @@
                         <h3>Linear Drum Beats -<small><a class="project-links" href="https://github.com/TheCodingCarlson/linear-drumbeats" target="_blank"> Github</a> | <a class="project-links" href="https://linear-drumbeats.herokuapp.com/" target="_blank">Demo</a></small></h3>
                         <p>A Linear Drumbeat is a drumbeat where no two sound sources strike at the same time. I made this simple VueJS project to create random linear patterns that I normally wouldn't think of. The app creates and draws the beat using drum notation. Users can also hit the play button to hear how the beat would sound if played by a drummer.</p>
 
-                         <p class="tech-used">Tech Used: HTML5, SCSS, JS, Bootstrap4, VueJS, Gulp and Express/NodeJS</p>
+                         <p class="tech-used">Tech Used: HTML5, SCSS, JS, Bootstrap4, VueJS, Gulp, Express/NodeJS</p>
                     </div>
                 </div>
 
@@ -175,7 +175,7 @@
                         <h3>Bog Adventure -<small><a class="project-links" href="https://github.com/TheCodingCarlson/bog_adventure" target="_blank"> Github</a> | <a class="project-links" href="https://bog-adventure.herokuapp.com/" target="_blank">Demo</a></small></h3>
                         <p>A simple Ruby on Rails app with CRUD functionality. Users can create and edit bog creatures as well as add tags to each creature. Creatures and tags can also be deleted.</p>
 
-                         <p class="tech-used">Tech Used: HTML5, CSS3, Ruby, Ruby on Rails and Postgres</p>
+                         <p class="tech-used">Tech Used: HTML5, CSS3, Ruby, Ruby on Rails, Postgres</p>
                     </div>
                 </div>
 
@@ -189,7 +189,7 @@
                             <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman" target="_blank"> Github</a> | <a class="project-links" href="http://thecodingcarlson.github.io/Hangman/" target="_blank"> Demo</a></small></h3>
                             <p>My first project during my time at General Assembly. I wanted to re-make the classic word guessing game and add a Western twist. The focus of this project was to make something functional that looked good and was also fun to play.</p>
 
-                            <p class="tech-used">Tech Used: HTML5, CSS3, JS, jQuery, Lazy Line Painter and the Wordnik API</p>
+                            <p class="tech-used">Tech Used: HTML5, CSS3, JS, jQuery, Lazy Line Painter, Wordnik API</p>
                         </div>
                     </div>
                 </template>
@@ -204,7 +204,7 @@
                             <h3>Jeopardy React -<small><a class="project-links" href="https://github.com/TheCodingCarlson/jeopardy_react" target="_blank"> Github</a> | <a class="project-links" href="http://thecodingcarlson.github.io/jeopardy_react/" target="_blank"> Demo</a></small></h3>
                             <p>An infinite scrolling trivia app I made using ReactJS. Random question data is generated from the jService API. Users can swipe back and forth between questions and answers (Please Note: Swiping only works on mobile devices). I used React Infinite to create the infinite scrolling/paging effect.</p>
 
-                            <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, jQuery, ReactJS, React Infinite, Swipe and the jService API</p>
+                            <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, jQuery, ReactJS, React Infinite, Swipe, jService API</p>
                         </div>
                     </div>
                 </template>
