--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="http://www.microsoftpartnersolutions.com/" target="_blank"><img class="img-responsive project-img" src="img/work/modern_retailer.png" /></a>
+                        <a href="http://www.microsoftpartnersolutions.com/" target="_blank"><img class="img-responsive project-img" src="img/work/modern_retailer.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>The Modern Retailer -<small><a class="project-links" href="http://www.microsoftpartnersolutions.com/" target="_blank"> Live Site</a></small></h3>
@@ -128,7 +128,7 @@
 
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"><img class="img-responsive project-img" src="img/work/acer.png" /></a>
+                        <a href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"><img class="img-responsive project-img" src="img/work/acer.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Acer Keep Asking -<small><a class="project-links" href="https://www.acer.com/ac/en/US/content/keep-asking" target="_blank"> Live Site</a></small></h3>
@@ -140,23 +140,10 @@
 
                 <h2 class="work-header">Projects/For Fun</h2>
 
-                <!-- Harmonize -->
-                <div class="project-row row">
-                    <div class="col-md-5">
-                        <a href="https://harmonize2.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/harmonize.png" /></a>
-                    </div>
-                    <div class="project-content col-md-6">
-                        <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize" target="_blank"> Github</a> | <a class="project-links" href="https://harmonize2.herokuapp.com/" target="_blank">Demo</a></small></h3>
-                        <p>A chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't sure how to put them together in a practical and musical way. Users can save favorite progressions to their profile for future reference.</p>
-
-                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, TeoriaJS, AngularJS, Express/NodeJS, MongoDB/Mongoose</p>
-                    </div>
-                </div>
-
                 <!-- Linear Drum Beats -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://linear-drumbeats.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/linear_drumbeats.png" /></a>
+                        <a href="https://linear-drumbeats.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/linear_drumbeats.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Linear Drum Beats -<small><a class="project-links" href="https://github.com/TheCodingCarlson/linear-drumbeats" target="_blank"> Github</a> | <a class="project-links" href="https://linear-drumbeats.herokuapp.com/" target="_blank">Demo</a></small></h3>
@@ -166,10 +153,23 @@
                     </div>
                 </div>
 
+                <!-- Harmonize -->
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="https://harmonize2.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/harmonize.jpg" /></a>
+                    </div>
+                    <div class="project-content col-md-6">
+                        <h3>Harmonize -<small><a class="project-links" href="https://github.com/TheCodingCarlson/harmonize" target="_blank"> Github</a> | <a class="project-links" href="https://harmonize2.herokuapp.com/" target="_blank">Demo</a></small></h3>
+                        <p>A chord helper app that allows users to pick a starting note and chord quality, and from there suggests chords that make sense to go to next in a progression. I wanted to create a tool for people that know some chords, but aren't sure how to put them together in a practical and musical way. Users can save favorite progressions to their profile for future reference.</p>
+
+                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, TeoriaJS, AngularJS, Express/NodeJS, MongoDB/Mongoose</p>
+                    </div>
+                </div>
+
                 <!-- Bog Adventure -->
                 <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://bog-adventure.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/bog_app.png" /></a>
+                        <a href="https://bog-adventure.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/bog_app.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Bog Adventure -<small><a class="project-links" href="https://github.com/TheCodingCarlson/bog_adventure" target="_blank"> Github</a> | <a class="project-links" href="https://bog-adventure.herokuapp.com/" target="_blank">Demo</a></small></h3>
@@ -180,41 +180,36 @@
                 </div>
 
                 <!-- Hangman -->
-                <template v-if="windowWidth > 992">
-                    <div class="project-row row">
-                        <div class="col-md-5">
-                            <a href="http://thecodingcarlson.github.io/Hangman/" target="_blank"><img class="img-responsive project-img grayscale" src="img/work/hangman.png" /></a>
-                        </div>
-                        <div class="project-content col-md-6">
-                            <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman" target="_blank"> Github</a> | <a class="project-links" href="http://thecodingcarlson.github.io/Hangman/" target="_blank"> Demo</a></small></h3>
-                            <p>My first project during my time at General Assembly. I wanted to re-make the classic word guessing game and add a Western twist. The focus of this project was to make something functional that looked good and was also fun to play.</p>
-
-                            <p class="tech-used">Tech Used: HTML5, CSS3, JS, jQuery, Lazy Line Painter, Wordnik API</p>
-                        </div>
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="http://thecodingcarlson.github.io/Hangman/" target="_blank"><img class="img-responsive project-img grayscale" src="img/work/hangman.jpg" /></a>
                     </div>
-                </template>
+                    <div class="project-content col-md-6">
+                        <h3>Hangman -<small><a class="project-links" href="https://github.com/TheCodingCarlson/Hangman" target="_blank"> Github</a> | <a class="project-links" href="http://thecodingcarlson.github.io/Hangman/" target="_blank"> Demo</a></small></h3>
+                        <p>My first project during my time at General Assembly. I wanted to re-make the classic word guessing game and add a Western twist. The focus of this project was to make something functional that looked good and was also fun to play.</p>
+
+                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, jQuery, Lazy Line Painter, Wordnik API</p>
+                    </div>
+                </div>
 
                 <!-- Jeopardy React -->
-                <template v-else>
-                    <div class="project-row row">
-                        <div class="col-md-5">
-                            <a href="http://thecodingcarlson.github.io/jeopardy_react/" target="_blank"><img class="img-responsive project-img" src="img/work/jeopardy.png" /></a>
-                        </div>
-                        <div class="project-content col-md-6">
-                            <h3>Jeopardy React -<small><a class="project-links" href="https://github.com/TheCodingCarlson/jeopardy_react" target="_blank"> Github</a> | <a class="project-links" href="http://thecodingcarlson.github.io/jeopardy_react/" target="_blank"> Demo</a></small></h3>
-                            <p>An infinite scrolling trivia app I made using ReactJS. Random question data is generated from the jService API. Users can swipe back and forth between questions and answers (Please Note: Swiping only works on mobile devices). I used React Infinite to create the infinite scrolling/paging effect.</p>
-
-                            <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, jQuery, ReactJS, React Infinite, Swipe, jService API</p>
-                        </div>
+                <div class="project-row row">
+                    <div class="col-md-5">
+                        <a href="http://thecodingcarlson.github.io/jeopardy_react/" target="_blank"><img class="img-responsive project-img" src="img/work/jeopardy.png" /></a>
                     </div>
-                </template>
+                    <div class="project-content col-md-6">
+                        <h3>Jeopardy React -<small><a class="project-links" href="https://github.com/TheCodingCarlson/jeopardy_react" target="_blank"> Github</a> | <a class="project-links" href="http://thecodingcarlson.github.io/jeopardy_react/" target="_blank"> Demo</a></small></h3>
+                        <p>An infinite scrolling trivia app I made using ReactJS. Random question data is generated from the jService API. Users can swipe back and forth between questions and answers (Please Note: Swiping only works on mobile devices). I used React Infinite to create the infinite scrolling/paging effect.</p>
 
-
+                        <p class="tech-used">Tech Used: HTML5, CSS3, JS, Bootstrap3, jQuery, ReactJS, React Infinite, Swipe, jService API</p>
+                    </div>
+                </div>
+                
                 <!-- OLD PROJECTS -->
                 <!-- Musicians Meet-Up -->
                 <!-- <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://musicians-meetup.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/mm.png" /></a>
+                        <a href="https://musicians-meetup.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/mm.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Musicians Meet-Up -<small><a class="project-links" href="https://github.com/TheCodingCarlson/musicians_meetup" target="_blank"> Github</a> | <a class="project-links" href="https://musicians-meetup.herokuapp.com/" target="_blank"> Demo</a></small></h3>
@@ -226,7 +221,7 @@
                 <!-- Concrt -->
                 <!-- <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://concrt.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/concrt.png" /></a>
+                        <a href="https://concrt.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/concrt.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Concrt -<small><a class="project-links" href="https://github.com/TheCodingCarlson/concrt"> Github Repo</a></small></h3>
@@ -237,7 +232,7 @@
                 <!-- Last FM D3 -->
                 <!-- <div class="project-row row">
                     <div class="col-md-5">
-                        <a href="https://lastfmd3.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/lastfm.png" /></a>
+                        <a href="https://lastfmd3.herokuapp.com/" target="_blank"><img class="img-responsive project-img" src="img/work/lastfm.jpg" /></a>
                     </div>
                     <div class="project-content col-md-6">
                         <h3>Last FM D3 -<small><a class="project-links" href="https://github.com/TheCodingCarlson/music-d3"> Github Repo</a></small></h3>
@@ -286,12 +281,6 @@
 
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
-
-    <!-- VueJS -->
-    <script src="js/vue.js"></script>
-
-    <!-- Mobile JS -->
-    <script src="js/mobile.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
